--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Employee Directory"
     />
     <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
